# reminders-service

./: README.md  docker-compose.yml  pyproject.toml
reminders/infrastructure/: __init__.py  aiohttp.py  settings.py
reminders/infrastructure/aws/: dynamodb.py
reminders/presentation/: __init__.py  app.py
tests/: conftest.py
tests/presentation/: test_health_check.py
